# tetris_godmod

./: .coverage  .gitignore  README.md  main.py  main_bot.py  main_seed.py  pyproject.toml  requirements.txt  scarping_data.ipynb  scenario.py  test.py  test_windows.py  y_dataframe.csv
.ipynb_checkpoints/: scarping_data-checkpoint.ipynb
MaTris/: matris.py
artefacts/: overfitter_model.hdf5  trained_model.h5  trained_model.hdf5
data_pro/: scarping_data.ipynb
scraping/: scarping_data.ipynb  scraping.py
src/: bot.py  config.py  env_constant.py  game.py  image_processing.py  images.py  save_examples.py  score.py  scraping.py  tetrominoes.py  train.py  windows.py
src/scraping/: scraping.py
tests/: test_bot.py  test_game.py  test_score.py  test_scraping.py  test_tetrominoes.py
train/: training_model_begining.ipynb  training_model_ten_lines.ipynb
