[tool.poetry]
name = "myenv"
version = "0.1.0"
description = "Tetris godmod"
authors = ["Morgan Gautherot"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pygame = "^2.5.2"
pytest = "^7.4.3"
opencv-python = "^4.8.1.78"
imutils = "^0.5.4"
pillow = "^10.1.0"
matplotlib = "^3.8.0"
numpy = "^1.26.1"
pandas = "^2.1.1"
tensorflow = "^2.14.0"
tensorflow-macos = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
